[gd_scene load_steps=2 format=3 uid="uid://cperformanceoverlay"]

[ext_resource type="Script" path="res://scripts/ui/performance_overlay.gd" id="1_overlay"]

[node name="PerformanceOverlay" type="CanvasLayer"]
layer = 100
script = ExtResource("1_overlay")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_bottom = 280.0
grow_horizontal = 0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
text = "Performance Monitor"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBox"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
text = "FPS: --
Frame: --ms
Memory: -- MB
Chunks: -- loaded
Sparkles: -- active
Preset: --"

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBox"]
layout_mode = 2

[node name="PresetLabel" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
text = "Quality Preset:"

[node name="PresetButtons" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="AdaptiveToggle" type="CheckButton" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
text = "Adaptive Mode"
